--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@apollo/client": "3.6.9",
     "@prisma/client": "4.3.1",
+    "@types/classnames": "^2.3.1",
     "apollo-server-micro": "3.10.2",
     "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
@@ -26,6 +27,7 @@
     "express": "4.18.1",
     "graphql": "16.5.0",
     "graphql-middleware": "6.0.9",
+    "graphql-request": "^5.0.0",
     "graphql-scalars": "1.18.0",
     "graphql-shield": "^7.5.0",
     "graphql-tag": "2.12.6",
