--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "dependencies": {
     "@apollo/client": "3.6.9",
-    "@prisma/client": "4.3.1",
+    "@prisma/client": "^4.4.0",
     "@types/classnames": "^2.3.1",
     "apollo-server-micro": "3.10.2",
     "axios": "^0.27.2",
@@ -52,7 +52,7 @@
     "@types/node": "16.11.58",
     "@types/react": "18.0.18",
     "dotenv-cli": "^6.0.0",
-    "prisma": "4.3.1",
+    "prisma": "^4.4.0",
     "ts-node": "10.9.1",
     "tsconfig-paths": "^4.1.0",
     "typescript": "4.8.3"
