--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
     "react-icons": "^4.4.0",
     "react-markdown": "8.0.3",
     "react-query": "^3.39.2",
-    "recoil": "^0.7.5"
+    "recoil": "^0.7.5",
+    "socket.io": "^4.5.2",
+    "socket.io-client": "^4.5.2"
   },
   "devDependencies": {
     "@types/graphql": "14.5.0",
