--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
     "classnames": "^2.3.1",
+    "date-fns": "^2.29.3",
     "dayjs": "^1.11.5",
     "express": "4.18.1",
     "graphql": "16.5.0",
@@ -40,6 +41,7 @@
     "postcss-preset-env": "^7.8.1",
     "query-string": "^7.1.1",
     "react": "18.2.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "react-markdown": "8.0.3",
@@ -49,10 +51,12 @@
     "socket.io-client": "^4.5.2"
   },
   "devDependencies": {
+    "@types/date-fns": "^2.6.0",
     "@types/graphql": "14.5.0",
     "@types/micro-cors": "0.1.2",
     "@types/node": "16.11.58",
     "@types/react": "18.0.18",
+    "@types/react-datepicker": "^4.4.2",
     "dotenv-cli": "^6.0.0",
     "prisma": "^4.4.0",
     "ts-node": "10.9.1",
