--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "micro": "9.4.1",
     "micro-cors": "0.1.1",
     "next": "12.3.0",
+    "next-pwa": "^5.6.0",
     "nexus": "1.3.0",
     "postcss-nested": "^5.0.6",
     "postcss-preset-env": "^7.8.1",
