--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@ node_modules/
 src/shared/generated/
 .next/
 **/public/workbox-*.js
+**/public/workbox-*.js.map
 **/public/sw.js
+**/public/sw.js.map
 **/public/worker-*.js
 .DS_Store
